--- a/admin-dashboard/src/app/pages/books/books.html
+++ b/admin-dashboard/src/app/pages/books/books.html
@@ -37,7 +37,7 @@
           <input
             type="text"
             class="form-control border-start-0"
-            placeholder="Search by title or owner..."
+            placeholder="Search by title or book ID..."
             [value]="searchQuery"
             (input)="onSearch($event)"
             [disabled]="loading"
@@ -49,16 +49,16 @@
       <div class="col-lg-6">
         <div class="d-flex gap-2 flex-wrap">
           <!-- Category Filter -->
-          <div class="dropdown">
+          <div class="dropdown" [class.show]="categoryDropdownOpen">
             <button
               class="btn btn-outline-secondary dropdown-toggle"
               type="button"
-              data-bs-toggle="dropdown"
+              (click)="toggleCategoryDropdown()"
               [disabled]="loading"
             >
               <i class="bi bi-tag"></i> {{ getSelectedCategoryName() }}
             </button>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu" [class.show]="categoryDropdownOpen">
               <li>
                 <a class="dropdown-item" href="javascript:void(0)" (click)="onCategoryFilter('')">
                   All Categories
@@ -78,16 +78,16 @@
           </div>
 
           <!-- Status Filter -->
-          <div class="dropdown">
+          <div class="dropdown" [class.show]="statusDropdownOpen">
             <button
               class="btn btn-outline-secondary dropdown-toggle"
               type="button"
-              data-bs-toggle="dropdown"
+              (click)="toggleStatusDropdown()"
               [disabled]="loading"
             >
               <i class="bi bi-circle-fill status-icon"></i> {{ getSelectedStatusName() }}
             </button>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu" [class.show]="statusDropdownOpen">
               <li>
                 <a class="dropdown-item" href="javascript:void(0)" (click)="onStatusFilter('')">
                   All Status
@@ -133,41 +133,30 @@
                   Donated
                 </a>
               </li>
-              <li><hr class="dropdown-divider" /></li>
               <li>
                 <a
                   class="dropdown-item"
                   href="javascript:void(0)"
-                  (click)="onStatusFilter('active')"
-                  [class.active]="selectedStatus === 'active'"
+                  (click)="onStatusFilter('deleted')"
+                  [class.active]="selectedStatus === 'deleted'"
                 >
-                  Active (Not Deleted)
-                </a>
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="javascript:void(0)"
-                  (click)="onStatusFilter('inactive')"
-                  [class.active]="selectedStatus === 'inactive'"
-                >
-                  Inactive (Deleted)
+                  Deleted
                 </a>
               </li>
             </ul>
           </div>
 
           <!-- Transaction Type Filter -->
-          <div class="dropdown">
+          <div class="dropdown" [class.show]="transactionTypeDropdownOpen">
             <button
               class="btn btn-outline-secondary dropdown-toggle"
               type="button"
-              data-bs-toggle="dropdown"
+              (click)="toggleTransactionTypeDropdown()"
               [disabled]="loading"
             >
               <i class="bi bi-arrow-left-right"></i> {{ getSelectedTransactionTypeName() }}
             </button>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu" [class.show]="transactionTypeDropdownOpen">
               <li>
                 <a
                   class="dropdown-item"
@@ -201,20 +190,10 @@
                 <a
                   class="dropdown-item"
                   href="javascript:void(0)"
-                  (click)="onTransactionTypeFilter('toExchange')"
-                  [class.active]="selectedTransactionType === 'toExchange'"
-                >
-                  Swap
-                </a>
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="javascript:void(0)"
                   (click)="onTransactionTypeFilter('toDonate')"
                   [class.active]="selectedTransactionType === 'toDonate'"
                 >
-                  Giveaway
+                  Donate
                 </a>
               </li>
             </ul>
