--- a/admin-dashboard/src/app/pages/login/login.html
+++ b/admin-dashboard/src/app/pages/login/login.html
@@ -70,7 +70,7 @@
             <input type="checkbox" id="rememberMe" formControlName="rememberMe" />
             <label for="rememberMe">Remember me</label>
           </div>
-          <a href="#" class="forgot-password">Forgot password?</a>
+          <a class="forgot-password" (click)="goToForgotPassword()">Forgot password?</a>
         </div>
 
         <!-- Submit Button -->
