--- a/admin-dashboard/src/app/pages/login/login.html
+++ b/admin-dashboard/src/app/pages/login/login.html
@@ -88,7 +88,7 @@
         <div class="login-footer">
           <p>
             Don't have an admin account?
-            <a href="#" class="signup-link">Contact support</a>
+            <a routerLink="/support" class="signup-link">Contact support</a>
           </p>
         </div>
       </form>
